2015-01-11  Per Bothner  <per@bothner.com>

	* CheckConsole.java: New helper class to support --console flag.
	(setHaveConsole, haveConsole): New methods.
	(haveConsole): New 3-valued field replaces boolean InPort.noConsole.
	* InPort.java (systemInPort): Use CheckConsole.haveConsole.
	(haveConsole): Moved to CheckConsole.
	(noConsole): Removed.

2014-12-19  Per Bothner  <per@bothner.com>

	* FilePath.java	(valueOf): If filename starts with "file:",
	first convert to URI.
	(resolve): If the relative path starts with "file:", create a
	FilePath rather than a URLPath.  Use relative File creation
	instead of URI#resolve - this is more robust with unusual characters.

2014-11-23  Per Bothner  <per@bothner.com>

	* Path.java (search): Fix logic error.

2014-10-29  Per Bothner  <per@bothner.com>

	* InPort.java (systemInPort): Initialize to a BinaryInPort if
	we have no console.
	(noConsole): Static field moved from repl.java.
	(haveConsole): New method.

2014-10-27  Per Bothner  <per@bothner.com>

	* NBufferedInputStream.java (fillBytes): Generalize to allow
	pos to be less than limit, and thus needing to be saved.  Needed if
	we fail to decode the first byte of a mutli-byte sequence.
	* BinaryInPort.java (fill): Fix decode logic.

2014-09-28  Per Bothner  <per@bothner.com>

	* BinaryInPort.java (defaultCset): New field.
	(setDefaultCharset): New method.
	(fill): Use defaultCset.
	* Path.java (search): New method for searching using a searchpath.
	(PATH_CURRENT, PATH_RELATIV): New constants.

2014-09-17  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (finishIDHash): New convenience method.

2014-07-17  Per Bothner  <per@bothner.com>

	* InPort.java (readCodePoint): Fix bad error in handling surrogates.

2014-05-13  Per Bothner  <per@bothner.com>

	* InPort.java (systemInFilename): New constant.

2014-03-18  Per Bothner  <per@bothner.com>

	* Path.java: Moved from gnu/text.
	* FilePath.java: Likewise.
	* URIPath.java: Likewise.
	* URLPath.java: Likewise.